--- a/core/server/translations/en.json
+++ b/core/server/translations/en.json
@@ -92,6 +92,7 @@
                 "missingAdminUserOrIntegration": "Unable to determine the authenticated user or integration. Check that cookies are being passed through if using session authentication.",
                 "adminApiKeyMissing": "Admin API Token missing kid header claim.",
                 "unknownAdminApiKey": "Unknown Admin API Key",
+                "adminApiKidMissing": "Unknown Admin API Key",
                 "unknownContentApiKey": "Unknown Content API Key",
                 "adminApiKidMissing": "Admin API kid missing.",
                 "invalidApiKeyType": "Invalid API Key type",
